--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -73,7 +73,7 @@ header .banner-text h3 {
 }
 header .banner-text h3 span,
 header .banner-text h3 a {
-   color: #fff;
+   color: #c300ff;
 }
 header .banner-text hr {
    width: 60%;
@@ -198,7 +198,7 @@ ul#nav li.current a { color: #F06000; }
 
 #about h2 {
    font: 22px/30px 'opensans-bold', sans-serif;
-   color: #fff;
+   color: #ffffff;
    margin-bottom: 12px;
 }
 #about p {
